--- a/POSMOVIL/cortes_pendientes.html
+++ b/POSMOVIL/cortes_pendientes.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <title>Cortes Pendientes – PROVSOFT</title>
   <meta name="theme-color" content="#0c6cbd">
+  <link rel="icon" href="data:,">
   <style>
     body {
       font-family: 'Poppins', sans-serif;
@@ -13,11 +14,8 @@
     }
     h1 { color: #00416A; text-align:center; margin-bottom:10px; }
     select {
-      display:block;
-      margin:0 auto 20px auto;
-      padding:8px 12px;
-      border-radius:6px;
-      border:1px solid #ccc;
+      display:block; margin:0 auto 20px auto;
+      padding:8px 12px; border-radius:6px; border:1px solid #ccc;
       font-size:14px;
     }
     table {
@@ -25,10 +23,7 @@
       border-radius: 10px; overflow:hidden;
       box-shadow: 0 3px 8px rgba(0,0,0,.1);
     }
-    th, td {
-      padding: 10px 12px; border-bottom: 1px solid #ddd;
-      text-align: left; font-size: 14px;
-    }
+    th, td { padding: 10px 12px; border-bottom: 1px solid #ddd; text-align: left; font-size: 14px; }
     th { background: #00416A; color: #fff; }
     tr:hover { background: #f1f5f9; }
     button {
@@ -36,8 +31,6 @@
       background:#0c6cbd; color:white; font-weight:600;
     }
     button[disabled] { background:#999; cursor:not-allowed; }
-
-    /* Modal */
     #modalResumen {
       display:none; position:fixed; inset:0; background:rgba(0,0,0,.55);
       align-items:center; justify-content:center; z-index:2000;
@@ -51,50 +44,49 @@
     .modal-card td, .modal-card th { border-bottom:1px solid #ddd; padding:6px; }
     .modal-actions { margin-top:15px; text-align:right; }
   </style>
-  <link rel="icon" href="data:,">
+
+  <!-- Librerías externas -->
   <script src="https://cdn.jsdelivr.net/npm/dom-to-image-more@3.3.0/dist/dom-to-image-more.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.1/dist/chart.umd.min.js"></script>
 </head>
 <body>
 
-  <h1>Cortes Pendientes</h1>
-  <select id="selectRuta">
-    <option value="">Selecciona una ruta...</option>
-  </select>
+<h1>Cortes Pendientes</h1>
+<select id="selectRuta"><option value="">Selecciona una ruta...</option></select>
 
-  <table id="tablaCortes">
-    <thead>
-      <tr>
-        <th>Usuario</th>
-        <th>Ruta</th>
-        <th>Total Día</th>
-        <th>Última Venta</th>
-        <th>Acción</th>
-      </tr>
-    </thead>
-    <tbody id="tbodyCortes">
-      <tr><td colspan="5" style="text-align:center;">Selecciona una ruta para ver pendientes</td></tr>
-    </tbody>
-  </table>
+<table id="tablaCortes">
+  <thead>
+    <tr>
+      <th>Usuario</th><th>Ruta</th><th>Total Día</th><th>Última Venta</th><th>Acción</th>
+    </tr>
+  </thead>
+  <tbody id="tbodyCortes">
+    <tr><td colspan="5" style="text-align:center;">Selecciona una ruta para ver pendientes</td></tr>
+  </tbody>
+</table>
 
-  <!-- Modal resumen -->
-  <div id="modalResumen">
-    <div class="modal-card">
-      <h2>Resumen de Corte</h2>
-      <div id="resumenContenido">Cargando...</div>
-      <div class="modal-actions">
-        <button id="btnCancelar">Cancelar</button>
-        <button id="btnConfirmar" style="background:#1e8e3e;">Confirmar Corte</button>
-      </div>
+<!-- Modal resumen -->
+<div id="modalResumen">
+  <div class="modal-card">
+    <h2>Resumen de Corte</h2>
+    <div id="resumenContenido">Cargando...</div>
+    <div class="modal-actions">
+      <button id="btnCancelar">Cancelar</button>
+      <button id="btnConfirmar" style="background:#1e8e3e;">Confirmar Corte</button>
     </div>
   </div>
+</div>
+
+<!-- Contenedor oculto para gráfica -->
+<div id="graficaDeptos" style="display:none;width:600px;height:400px;">
+  <canvas id="canvasDeptos" width="600" height="400"></canvas>
+</div>
 
 <script type="module">
 import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js";
-import { 
-  getFirestore, collection, getDocs, query, where, updateDoc, doc, addDoc, serverTimestamp 
-} from "https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore.js";
+import { getFirestore, collection, getDocs, query, where, updateDoc, doc, addDoc, serverTimestamp } 
+from "https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore.js";
 
 document.addEventListener("DOMContentLoaded", async () => {
   const firebaseConfig = {
@@ -120,23 +112,16 @@ document.addEventListener("DOMContentLoaded", async () => {
 
   async function cargarDepartamentos() {
     const depSnap = await getDocs(collection(db, "departamentos_venta"));
-    depSnap.forEach(d => {
-      const data = d.data();
-      mapaDepartamentos[data.id?.toString()] = data;
-    });
+    depSnap.forEach(d => { const data = d.data(); mapaDepartamentos[data.id?.toString()] = data; });
   }
 
   async function cargarRutas() {
     const snap = await getDocs(collection(db, "rutas_venta"));
     const rutas = new Map();
-    snap.forEach(d => {
-      const v = d.data();
-      if (v.rutaId) rutas.set(v.rutaId, v.atendio || v.usuario || "Desconocido");
-    });
+    snap.forEach(d => { const v = d.data(); if (v.rutaId) rutas.set(v.rutaId, v.atendio || v.usuario || "Desconocido"); });
     rutas.forEach((nombre, id) => {
       const opt = document.createElement("option");
-      opt.value = id;
-      opt.textContent = `${nombre} – ${id}`;
+      opt.value = id; opt.textContent = `${nombre} – ${id}`;
       selectRuta.appendChild(opt);
     });
   }
@@ -189,7 +174,6 @@ document.addEventListener("DOMContentLoaded", async () => {
 
     const qVentas = query(collection(db, "rutas_venta"), where("rutaId", "==", rutaId), where("cortado", "==", false));
     const snap = await getDocs(qVentas);
-    const ventas = snap.docs.map(d => ({ id: d.id, ...d.data() }));
     for (const d of snap.docs) await updateDoc(doc(db, "rutas_venta", d.id), { cortado: true });
 
     await addDoc(collection(db, "cortes_globales"), {
@@ -197,17 +181,17 @@ document.addEventListener("DOMContentLoaded", async () => {
       fecha: serverTimestamp(),
       creado_en: new Date().toISOString(),
       realizado_por: "Administrador",
-      total_registros: ventas.length,
+      total_registros: resumen.totalTickets,
       resumen
     });
 
+    await generarPDFyEnviar(resumen, rutaId);
     alert("✅ Corte realizado y PDF enviado a Telegram.");
     modal.style.display = "none";
     selectRuta.value = "";
     tbody.innerHTML = "<tr><td colspan='5'>Selecciona una ruta...</td></tr>";
   };
 
-  // 🟩 FIX — AQUÍ ESTABA EL ERROR
   async function mostrarResumenCorte(rutaId) {
     contenido.innerHTML = "Generando resumen...";
     modal.style.display = "flex";
@@ -233,9 +217,7 @@ document.addEventListener("DOMContentLoaded", async () => {
       }
     }
 
-    // ✅ Aquí se define correctamente:
     const totalTickets = ventas.length;
-
     const nombreCorte = ventas[0]?.usuarioNombre || ventas[0]?.atendio || ventas[0]?.usuario || "Desconocido";
     corteActual.resumen = { totalDia, totalTickets, porMetodo, porDepto, nombreCorte };
 
@@ -248,8 +230,84 @@ document.addEventListener("DOMContentLoaded", async () => {
     for (const [met, val] of Object.entries(porMetodo))
       html += `<tr><td>${met}</td><td style='text-align:right;'>$${val.toFixed(2)}</td></tr>`;
     html += "</tbody></table>";
-
     contenido.innerHTML = html;
+  }
+
+  // === Generar PDF tamaño carta ===
+  async function generarPDFyEnviar(resumen, rutaId) {
+    const { jsPDF } = window.jspdf;
+    const pdf = new jsPDF({ format: "letter", unit: "mm" });
+
+    pdf.setFont("helvetica", "bold");
+    pdf.setFontSize(14);
+    pdf.text(`CORTE DE RUTA – ${rutaId}`, 10, 15);
+
+    pdf.setFont("helvetica", "normal");
+    pdf.setFontSize(10);
+    pdf.text(`Fecha: ${new Date().toLocaleString()}`, 10, 22);
+    pdf.text(`Total del día: $${resumen.totalDia.toFixed(2)}`, 10, 28);
+    pdf.text(`Tickets: ${resumen.totalTickets}`, 10, 34);
+
+    pdf.setFont("helvetica", "bold");
+    pdf.text("Métodos de Pago:", 10, 42);
+    pdf.setFont("helvetica", "normal");
+    let y = 48;
+    for (const [met, val] of Object.entries(resumen.porMetodo)) {
+      pdf.text(`${met}: $${val.toFixed(2)}`, 12, y); y += 5;
+    }
+
+    y += 3; pdf.setFont("helvetica", "bold"); pdf.text("Totales por Departamento:", 10, y);
+    pdf.setFont("helvetica", "normal"); y += 5;
+    for (const [dep, val] of Object.entries(resumen.porDepto)) {
+      pdf.text(`${dep}: $${val.toFixed(2)}`, 12, y); y += 4;
+    }
+
+    // 🥧 Generar gráfica a la derecha
+    try {
+      const imgGraf = await generarImagenGraficaDeptos(resumen.porDepto);
+      if (imgGraf) pdf.addImage(imgGraf, "PNG", 110, 45, 90, 90);
+    } catch (e) { console.error("Error gráfica:", e); }
+
+    pdf.setFontSize(8);
+    pdf.text("Reporte generado automáticamente por PROVSOFT POS", 10, 275);
+
+    const fecha = new Date().toISOString().slice(0,10);
+    const nombreArchivo = `Corte_${rutaId}_${fecha}.pdf`;
+    const pdfBlob = pdf.output("blob");
+
+    await enviarPDFaTelegram(pdfBlob, nombreArchivo, 
+      `📦 *Corte generado*\nRuta: ${rutaId}\nTotal: $${resumen.totalDia.toFixed(2)}\nTickets: ${resumen.totalTickets}\nFecha: ${new Date().toLocaleString()}`);
+  }
+
+  async function generarImagenGraficaDeptos(porDepto) {
+    const divGrafica = document.getElementById("graficaDeptos");
+    const canvas = document.getElementById("canvasDeptos");
+    divGrafica.style.display = "block";
+    const ctx = canvas.getContext("2d");
+    const etiquetas = Object.keys(porDepto);
+    const valores = Object.values(porDepto);
+    const chart = new Chart(ctx, {
+      type: "pie",
+      data: { labels: etiquetas, datasets: [{ data: valores }] },
+      options: { plugins: { legend: { position: "right" } }, animation: false }
+    });
+    await new Promise(r => setTimeout(r, 1000));
+    const dataUrl = await domtoimage.toPng(divGrafica, { quality: 0.95, bgcolor: "#fff" });
+    chart.destroy(); divGrafica.style.display = "none";
+    return dataUrl;
+  }
+
+  async function enviarPDFaTelegram(pdfBlob, nombreArchivo, resumenTexto) {
+    const BOT_TOKEN = "8272633411:AAE6uKTpEtPW--IPk6ufix_CDGJ0dH6ru4Q";
+    const CHAT_ID   = "6617988297";
+    const formData = new FormData();
+    formData.append("chat_id", CHAT_ID);
+    formData.append("caption", resumenTexto);
+    formData.append("document", pdfBlob, nombreArchivo);
+    try {
+      const resp = await fetch(`https://api.telegram.org/bot${BOT_TOKEN}/sendDocument`, { method: "POST", body: formData });
+      console.log("📤 Telegram:", await resp.json());
+    } catch (err) { console.error("Error Telegram:", err); }
   }
 
   await cargarDepartamentos();
