--- a/index.html
+++ b/index.html
@@ -64,6 +64,9 @@
   <div class="apps">
     <a href="POSMOVIL/POSICIONVTA.html">🔎 Trazado de Rutas </a>
   </div>
+  <div class="apps">
+    <a href="POSMOVIL/RETICKES.html">🔎 Retickets </a>
+  </div>
 
   <footer>
     Powered by <b>PROVSOFT</b>
